  * modules/debian: ensure dpkg is configured before starting removing pkgs
  * modules/ubuntu: added, recompiles python modules and copies the kernel
    from the image.
  * setup.py: ship the ubuntu module.
  * debian/:
    - Added linstaller-config-ubuntu package
    - Added linstaller-modules-ubuntu package
    - linstaller-config-semplice now depends on linstaller and modules-base

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Sun, 19 Feb 2012 12:18:41 +0100

linstaller (2.10.7-1) pulse; urgency=low

  * config/semplice-base: execute network.inst too
  * modules/network: copy host's resolv.conf to the target
  * modules/mirrorselect: correctly close the chroot if the prechecks
    returns False.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Sun, 05 Feb 2012 19:47:04 +0100

linstaller (2.10.6-1) pulse; urgency=low

  * linstaller.py: populate modules_settings from the inline
    preseeds.
  * partdisks: library: mount_partition can now skip mountpoint check
    if check == False.
  * partdisks: library: fixed opts handling if remounting.
  * partdisks: inst: do not require "changed" from frontend.
  * partdisks: inst: bind-mount /dev, /sys and /proc (moved from
    unsquash).
  * frontends/gtk3: errors and steps handling.
  * userhost: gtk3 frontend: completed.
  * frontends/gtk3: exit from the loop via a thread; fixed button sequence;
    line_wrap on new text; new section object (doesn't work); fixed
    reset_position; override start action: modules should use the gtk_start
    function instead.
  * userhost: gtk3 frontend: use section (doesn't work).

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Sat, 28 Jan 2012 22:23:30 +0100

linstaller (2.10.5-1) pulse; urgency=low

  * Fixed setup.py

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Thu, 19 Jan 2012 17:12:24 +0100

linstaller (2.10.4-1) pulse; urgency=low

  * Added mirrorselect module.
  * Begin work on the gtk3 frontend.
  * Fixed crash if some updates are found.
